# insider-trading-analysis

./: .coverage  .gitignore  Makefile  README.md  __init__.py  alembic.ini  build_dataset.py  clean.py  cli.py  config.py  design  docker-compose.yml  main.py  mapping.py  plots.py  pyproject.toml  pytest.ini  requirements.txt  sec_client.py
data/final/: exchange_mapping_final_20251207_024935.parquet
data/staging/: exchange_mapping_cleaned_20251207_024934.parquet  exchange_mapping_deduped_20251207_024934.parquet  exchange_mapping_normalized_20251207_024934.parquet
docs/: README.md  design.txt  notes.txt
migrations/: env.py
migrations/versions/: 29d02dfaf39a_create_core_tables.py  5ff0630fa272_add_filed_at_column.py
src/: yahoo_finance_source.py
src/analytics/: analysis.py  plot_service.py  plots.py  present.py
src/cli/: cli.py  cli_commands.py  cli_factory.py  cli_handlers.py  insider_cli.py  plot_cli.py  run_cli.py
src/config/: insider_trading_config.py  settings.py
src/db/: config.py  db.py  etl_db.py  models.py  repository.py  sql_agent.py  sql_runner.py  sql_workflow.py
src/insider_trading/: core_controller.py  pipeline.py
src/insider_trading_analysis/: TSLA  build_dataset.py  cli.py  logger.py
src/ohlc/: merge_for_plot.py  ohcl_cleaner.py  yahoo_fetcher.py
src/orchestrator/: pipeline.py
src/scripts/: load_exchange_mapping.py  load_insider_transactions.py  load_ohlc_prices.py  run_insider_trading_pipeline.py
src/utils/: fix_fields.py  logger.py  utils.py
src/writers/: final_writer.py  raw_writer.py  staging_writer.py
(+54 files in other folders)
