[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "insider_trading_analysis"
version = "0.1.0"
description = "Insider trading analysis etl toolkit"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
insider_cli = "cli.run_cli:cli"

